--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://mariia_artur:QazWsxEdc123@cluster0.kdoyq.mongodb.net/<dbname>?retryWrites=true&w=majority
+spring.data.mongodb.database=race
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
