--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.0.3</version>
+                <configuration>
+                    <user>mariia_artur</user>
+                    <password>QazWsxEdc123</password>
+                    <schemas>
+                        <schema>race</schema>
+                    </schemas>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
